openjdk23/jdk/test/langtools/tools/javac/annotations/neg/Package.java
/*
 * StarshipOS Copyright (c) 2025. R.A. James
 */

@java.lang.annotation.Documented
package foo.bar;
